--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
+:root {
+    --primary-color: rgb(255, 255, 70);
+    --secondary-color: DimGrey;
+    --tertuary-color: Gainsboro;
+}
+
 body {
-    background-color: rgb(1, 45, 1);
+    background-color: var(--primary-color);
+    font-size: 15px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+#container {
+    height: 525px;
+    width: 360px;
+    margin: 100px auto;
+    background: var(--secondary-color);
+    box-shadow: 5px 5px 10px black;
+    border-radius: 20px;
+
 }
