--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: rgb(255, 255, 70);
     --secondary-color: DimGrey;
-    --tertuary-color: Gainsboro;
+    --tertuary-color: rgb(144, 132, 1);
 }
 
 body {
@@ -17,5 +17,54 @@ body {
     background: var(--secondary-color);
     box-shadow: 5px 5px 10px black;
     border-radius: 20px;
+}
+
+.title {
+    background: var(--tertuary-color);
+    color: black;
+    padding: 20px;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: normal;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    text-align: center;
+}
+
+.tipsForm {
+    padding-left: 20px;
+    padding-right: 20px;   
+}
+
+.formInput {
+    background: white;
+    width: 40px;
+    padding: 5px 5px 10px 10px;
+}
+
+.formInput:focus {
+    border: 3px solid var(--tertuary-color);
+    outline: none;
+}
+
+.formSelect {
+    width: 180px;
+    padding: 5px;
+    font-size: 12px;
+}
+
+.formSubmit {
+    text-transform: uppercase;
+    font-weight: bold;
+    display: block;
+    margin: 30px auto;
+    background: var(--tertuary-color);
+    border-radius: 5px;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    color: white;
 
 }
