--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: var(--primary-color);
+    background-color: bisque;
     font-size: 15px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -22,12 +22,10 @@ body {
 .title {
     background: var(--tertuary-color);
     color: black;
-    padding: 20px;
+    padding: 15px;
     text-transform: uppercase;
-    font-size: 18px;
-    font-weight: normal;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    font-size: 20px;
+    font-weight: 700px;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     text-align: center;
